# dhcp-lease

./: .gitignore  CMakeLists.txt  README.md
include/lease/: database.h  lease.h  sql_builder.h
src/: lease.c  sql_builder.c
tests/: CMakeLists.txt  lease_test.c  lease_test.h  main.c  main.h
tests/database/: dhcpd.db
tests/scripts/: faker.py  requirements.txt
